# freearc

./: Arc.hs  ArcCreate.hs  ArcExtract.hs  ArcRecover.hs  ArcvProcessCompress.hs  ArcvProcessExtract.hs  ArcvProcessRead.hs  ArhiveDirectory.hs  ArhiveFileList.hs  ArhiveStructure.hs  ByteStream.hs  CUI.hs  Charsets.hs  Cmdline.hs  Compression.hs  Encryption.hs  Environment.cpp  Environment.h  Errors.hs  FileInfo.hs  FileManDialogAdd.hs  FileManDialogs.hs  FileManPanel.hs  FileManUtils.hs  FileManager.hs  FilePath.hs  Files.hs  GUI.hs  GuiEnvironment.cpp  Options.hs  Process.hs  UI.hs  UIBase.hs  URL.cpp  URL.h  UTF8Z.hs  Utils.hs  Win32Files.h  Win32Files.hs  archive_my_work.cmd  (+12 more)
ArcShellExt/: ArcShellExt-register.cmd  ArcShellExt-remove.reg  ArcShellExt-system.lua  ArcShellExt-user.lua  ArcShellExt.cpp  ArcShellExt.def  ArcShellExt.h  ArcShellExt.lua  ArcShellExt.rc  Makefile  compile-msvc.cmd  compile-msvc64.cmd  compile.cmd  license.txt  readme.txt  resource.h
Compression/: CELS.cpp  CELS.h  Common.cpp  Common.h  Compression.h  CompressionLib.hs  CompressionLibrary.cpp  EncryptionLib.hs  HsCELS.hs  MultiThreading.h  NewCompression.h  NewCompressionLib.cpp  NewCompressionLib.hs  compile  compile-dll.cmd  compile.cmd  facompress.def  makefile  makefile-dll
Compression/CLS/: C_CLS.cpp  C_CLS.h  makefile
Compression/Delta/: C_Delta.cpp  C_Delta.h  Delta.cpp  compile.cmd  makefile
Compression/Dict/: C_Dict.cpp  C_Dict.h  compile.cmd  dict.cpp  history.txt  makefile
Compression/GRZip/: BWT.c  C_GRZip.cpp  C_GRZip.h  (+9 more)
Compression/_TABI/: LICENSE  Makefile  Setup.hs  tabi.cabal  tabi.h  tabi.hsc  tabi.lua
Compression/_TABI/Examples/: cpp-example.cpp  cpp-server.cpp  example.lua  hs-example.hs  runall.cmd
Documentation/: History.txt  tests
HsLua/: Makefile  hslua.cabal
HsLua/src/Scripting/: Lua.hs
HsLua/tests/: HsLuaMain.hs
Installer/: FreeArc-delete-all.nsh  FreeArc-delete-old.nsh  FreeArc.nsi  FreeArc.url  buildList.hs  release.cmd  release1.cmd  release2.cmd  release3.cmd  setenv.nsh
Tests/: arc.ini  compile-GUI-O2.cmd  compile-GUI.cmd  compile-O2.cmd  compile.cmd
Unarc/: ArcCommand.h  ArcProcess.h  ArcStructure.h  CUI.h  FarPlugin.cpp  FarPlugin.def  LibUI.h  makefile  readme.txt  unarc.cpp  unarc.def  unarcdll.cpp  unarcdll.h
(+225 files in other folders)
